fix(search-bar): adjust spacing for placeholder text, truncate it with ellipsis on overflow

--- a/projects/extra-clarity/search-bar/src/search-bar.component.scss
+++ b/projects/extra-clarity/search-bar/src/search-bar.component.scss
@@ -24,6 +24,11 @@
   .clr-input {
     padding: 0 1.25rem !important;
   }
+
+  .clr-input:placeholder-shown {
+    padding-right: 0.1rem !important;
+    text-overflow: ellipsis;
+  }
 }
 
 .ec-search-bar-label {
